--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "manifestare",
   "version": "0.1.0",
+  "homepage": "https://juanpablozunigahidalgo.github.io/manifestare.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -20,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "react-scripts starts",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
