--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy" : "react-scripts starts",
-    "deploy" : "gh-pages -d build",
+    "deploy" : "gh-pages -d dist",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
